# iran-oil-opportunity

./: .env.example  .gitignore  README.md  pyproject.toml
data/ib/: cl_h1.csv  cl_m1.csv
data/reference/: fred_brent_ovx_q1_2026.csv
docs/: mt5_runbook.md  operations.md  research.md  sources.md
scripts/: backtest_strategy.py  collect_mt5_history.py  correlation_scan.py  ib_collect_oil_history.py  ib_paper_trade_oil.py  local_news_monitor.py  paper_trade_loop.py  paper_trade_service.py  polymarket_monitor.py  polymarket_service.py  probe_mt5.py  start_ib_oil_bot.ps1
src/iran_oil_opportunity/: __init__.py  alternative_data.py  backtest.py  broker.py  cli.py  config.py  cross_asset.py  discovery.py  features.py  headline_llm.py  ib_client.py  local_news.py  market_data.py  monitoring.py  mt5_client.py  paper.py  prediction_markets.py  risk.py  strategy.py
tests/: __init__.py  test_alternative_data.py  test_backtest.py  test_cross_asset.py  test_discovery.py  test_ib_client.py  test_local_news.py  test_strategy.py
