[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "iran-oil-opportunity"
version = "0.1.0"
description = "MT5 demo-only oil-volatility research and paper-trading toolkit for the March 2026 Iran war shock."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "MetaTrader5>=5.0.45",
  "numpy>=2.2.0",
  "pandas>=2.2.3",
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
  "scipy>=1.15.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.3.4",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iran_oil_opportunity"]
